= CHANGES

== 0.9.19 (unreleased)

* Now Admin password are undecryptable [Thanks to Sob]
* Arrayify keys for invalidation in padrino-cache
* Fixed few typos errors [Thanks to Philtr]
* Fix conflict on seeds.rb when generating admin [Thanks to Spllr]
* Correct path in spec [Thanks to Spllr]
* Bypass admin login in development
* Norwegian translation [Thanks to Fossmo]
* Updated generator for new rspec version [Thanks to Rosstimson]
* Updated generator to work with legacy rspec version
* Fixed issue with views folder not being generated in projects
* Fixed the listing headers of admin pages, now is plural [Thanks to Rosstimson]
* Fixed model migration removal [Thanks to sob]

== 0.9.18

* Updated to use latest http_router
* Fix undefined method crypted_password when using Postgresql + Sequel [Thanks to Commuter]
* Preserve params for after use by a before filter
* Fix const scope for Rack::Mime [Thanks to spllr]

== 0.9.17

* Fixed a problem with routing of “/”
* Added utf-8 feature in forms using utf8/_e/snowman tag

== 0.9.16

* Fixed problems with admin
* Now only AS > 3.0
* Added padrino-cache
* Added redis backend for padrino-cache
* Added dom helpers [Thanks to nu7hatch]
* Added regex support for route portions
* Update rspec generation to use let() [Thanks to rbxbx]
* Added mysql2 support for activerecord [Thanks to kyanagi]
* Fixed riot test helper generation
* Added concise routing support
* Added controller mapping support
* Fixed tests to support concurrency
* Fixed options_for_selec to be Array-compatible [Thanks to zmack]
* Support Sinatra before blocks correctly
* Added support for shallowing in controllers
* Remove padrino-admin dependency on padrino-gen [Thanks to selman]

== 0.9.15

* Fixed an issue with reloader
* Added erubis support [Thanks Cored]
* Fixed custom conditions
* Adds Template/Plugin generation
* Added regex support in routes
* Removed some deprecations
* Fixes options_for_select helper selected logic and added test